<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_paragraph">Paragraph</string>
    <string name="action_bold">Bold</string>
    <string name="action_italics">Italics</string>
    <string name="action_underline">Underline</string>
    <string name="button_bold">B</string>
    <string name="button_italics">I</string>

</resources>
